--- a/produccion_2/CSS/style.css
+++ b/produccion_2/CSS/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Advent+Pro:wght@600&family=Roboto:wght@300;400&display=swap");
 
 /*Titulos y parrafos*/
+
 h1 {
   font-family: "Advent Pro", sans-serif;
   font-size: 60px;
@@ -12,7 +13,11 @@ h2 {
   font-family: "Advent Pro", sans-serif;
   font-size: 40px;
   color: rgb(41, 33, 25);
-  padding-bottom: 40px;
+  padding-bottom: 0px;
+}
+
+h4 {
+  font-family: "Advent Pro", sans-serif;
 }
 
 h5 {
@@ -28,14 +33,24 @@ p {
   font-size: 16px;
   font-weight: 400;
 }
+
+a {
+  text-decoration: none;
+}
+
 /*Espacios entre secciones*/
 .padding {
   padding: 10% 4% 0% 4%;
 }
 /*Card*/
 .card-img-top {
-  height: 300px;
+  height: 60vh;
+  width: auto;
   object-fit: cover;
+}
+
+.reconocimiento {
+  height: 20vh;
 }
 
 .reconocimiento {
@@ -195,6 +210,164 @@ footer p {
   animation-fill-mode: forwards;
 }
 
+@media (max-width: 767px) {
+  .carousel-inner .carousel-item > div {
+    display: none;
+  }
+  .carousel-inner .carousel-item > div:first-child {
+    display: block;
+  }
+}
+
+.carousel-inner .carousel-item.active,
+.carousel-inner .carousel-item-next,
+.carousel-inner .carousel-item-prev {
+  display: flex;
+}
+
+/* medium and up screens */
+@media (min-width: 768px) {
+  .carousel-inner .carousel-item-end.active,
+  .carousel-inner .carousel-item-next {
+    transform: translateX(25%);
+  }
+
+  .carousel-inner .carousel-item-start.active,
+  .carousel-inner .carousel-item-prev {
+    transform: translateX(-25%);
+  }
+}
+
+.carousel-inner .carousel-item-end,
+.carousel-inner .carousel-item-start {
+  transform: translateX(0);
+}
+
+/* Galeria de imagenes en la pagina backstage */
+#gallery-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: -1;
+}
+
+#thumbnail-gallery-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  padding: 15px 50px 10px 50px;
+}
+
+.thumbnail {
+  width: 20%;
+  margin-bottom: 0;
+  position: relative;
+}
+
+.carousel-caption {
+  background: rgba(255, 255, 255, 0.929);
+  opacity: 0.8;
+  /* otros estilos */
+}
+
+img.thumbnail-image {
+  width: 90%;
+  height: 90%;
+  object-fit: cover;
+  object-position: center center;
+}
+
+@media only screen and (max-width: 800px) {
+  #gallery-section {
+    padding: 10px 10px 0px 10px;
+  }
+  #thumbnail-gallery-container {
+    padding: 0px;
+  }
+}
+
+/* Lightbox Styles */
+
+.lightbox-overlay {
+  display: flex;
+  transform: scale(0, 1);
+  transition: transform 400ms ease-out;
+  transform-origin: center;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(80, 80, 80, 0.95);
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.lightbox-overlay:target {
+  display: flex;
+  transform: scale(1, 1);
+  z-index: 99999;
+}
+
+.lightbox-content {
+  color: rgb(250, 250, 250);
+  padding: 1.5em;
+  width: 75vw;
+  text-align: center;
+}
+
+.lightbox-image-title {
+  position: relative;
+  text-align: center;
+}
+
+.lightbox-navigation {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+}
+
+.close {
+  position: absolute;
+  background-color: none;
+  top: 5px; /* Top Right Corner Placement */
+  right: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+a.close {
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 2em;
+  font-family: sans-serif;
+}
+
+.close::after {
+  content: "X";
+  color: rgb(250, 250, 250);
+}
+
+.back,
+.next {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24%;
+  height: 2em;
+  color: rgb(255, 255, 255);
+  margin: 1%;
+}
+
+img.lightbox-image {
+  width: auto;
+  max-height: 80vh;
+  object-fit: contain;
+}
+
+/*Fin de la galeria de imagenes*/
+
 @keyframes moveArrow {
   from {
     transform: translateY(-100px);
@@ -260,6 +433,10 @@ footer p {
 
   .header-tablet {
     display: none;
+  }
+
+  .header {
+    height: 90vh;
   }
 
   .card-img-overlay {
