--- a/produccion_2/CSS/style.css
+++ b/produccion_2/CSS/style.css
@@ -1,28 +1,31 @@
 @import url("https://fonts.googleapis.com/css2?family=Advent+Pro:wght@600&family=Roboto:wght@300;400&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Fira+Mono:400");
 
-/*Titulos y parrafos*/
+* {
+  margin: 0px;
+}
+
+/*Tipografia*/
+h1,
+h2,
+h3,
+h4,
+h6 {
+  font-family: "Advent Pro", sans-serif;
+  color: rgb(41, 33, 25);
+}
 
 h1 {
-  font-family: "Advent Pro", sans-serif;
   font-size: 60px;
-  color: rgb(41, 33, 25);
-  padding-bottom: 40px;
 }
 
 h2 {
-  font-family: "Advent Pro", sans-serif;
-  font-size: 40px;
-  color: rgb(41, 33, 25);
-  padding-bottom: 0px;
-}
-
-h4 {
-  font-family: "Advent Pro", sans-serif;
+  font-size: 3rem;
 }
 
 h5 {
   font-family: "Roboto", sans-serif;
-  font-size: 20px;
+  font-size: 1.2rem;
   font-weight: 400;
   color: rgb(41, 33, 25);
 }
@@ -30,19 +33,74 @@ h5 {
 p {
   color: rgb(41, 33, 25);
   font-family: "Roboto", sans-serif;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
 }
 
 a {
   text-decoration: none;
 }
+/*Fin de la tipografia*/
 
-/*Espacios entre secciones*/
-.padding {
-  padding: 10% 4% 0% 4%;
+section {
+  padding: 4rem;
 }
-/*Card*/
+
+i {
+  padding: 10px;
+}
+
+img.thumbnail-image {
+  width: 90%;
+  height: 90%;
+  object-fit: cover;
+  object-position: center center;
+}
+
+a.close {
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 2em;
+  font-family: sans-serif;
+}
+
+img.lightbox-image {
+  width: auto;
+  max-height: 80vh;
+  object-fit: contain;
+}
+button {
+  margin-top: 1.5rem;
+}
+
+footer {
+  padding: 2rem;
+  border-top: 1px solid rgb(41, 33, 25);
+}
+footer p {
+  color: black;
+  text-align: center;
+}
+
+.header-mobile {
+  display: none;
+}
+
+.header-tablet {
+  display: none;
+}
+
+/*Flecha animada*/
+.card-overlay {
+  position: relative;
+}
+.card-overlay img:last-child {
+  position: absolute;
+  top: 0;
+  left: 45%;
+}
+/*Fin de la flecha animada*/
+
 .card-img-top {
   height: 60vh;
   width: auto;
@@ -50,13 +108,9 @@ a {
 }
 
 .reconocimiento {
-  height: 20vh;
-}
-
-.reconocimiento {
-  height: 200px;
+  height: 30vh;
   object-fit: contain;
-  padding: 20px;
+  padding: 1rem;
 }
 
 .card-img-overlay {
@@ -68,75 +122,20 @@ a {
   text-shadow: 2px 2px 4px rgb(171, 157, 140);
 }
 
-/*Posicion de la flecha */
-.card-overlay {
-  position: relative;
-}
-.card-overlay img:last-child {
-  position: absolute;
-  top: 0;
-  left: 45%;
+.animated-arrow {
+  animation-name: moveArrow;
+  animation-duration: 2s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
 }
 
-.header-mobile {
-  display: none;
-}
-
-.header-tablet {
-  display: none;
-}
-
-#cta {
-  height: 300px;
-  width: auto;
-  animation-name: bounce;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
-}
-
-@keyframes bounce {
-  0% {
-    transform: translateY(0);
+@keyframes moveArrow {
+  from {
+    transform: translateY(-100px);
   }
-  50% {
-    transform: translateY(-20px);
+  to {
+    transform: translateY(40px);
   }
-  100% {
-    transform: translateY(0);
-  }
-}
-
-#cta-desktop {
-  margin: 0px;
-  padding: 40px 0px 0px 0px;
-  /*background-image: linear-gradient(to bottom right, #cac3bb, #3f2406);*/
-  background-color: #3f2406;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 56 28' width='56' height='28'%3E%3Cpath fill='%23ebc7a9' fill-opacity='0.14' d='M56 26v2h-7.75c2.3-1.27 4.94-2 7.75-2zm-26 2a2 2 0 1 0-4 0h-4.09A25.98 25.98 0 0 0 0 16v-2c.67 0 1.34.02 2 .07V14a2 2 0 0 0-2-2v-2a4 4 0 0 1 3.98 3.6 28.09 28.09 0 0 1 2.8-3.86A8 8 0 0 0 0 6V4a9.99 9.99 0 0 1 8.17 4.23c.94-.95 1.96-1.83 3.03-2.63A13.98 13.98 0 0 0 0 0h7.75c2 1.1 3.73 2.63 5.1 4.45 1.12-.72 2.3-1.37 3.53-1.93A20.1 20.1 0 0 0 14.28 0h2.7c.45.56.88 1.14 1.29 1.74 1.3-.48 2.63-.87 4-1.15-.11-.2-.23-.4-.36-.59H26v.07a28.4 28.4 0 0 1 4 0V0h4.09l-.37.59c1.38.28 2.72.67 4.01 1.15.4-.6.84-1.18 1.3-1.74h2.69a20.1 20.1 0 0 0-2.1 2.52c1.23.56 2.41 1.2 3.54 1.93A16.08 16.08 0 0 1 48.25 0H56c-4.58 0-8.65 2.2-11.2 5.6 1.07.8 2.09 1.68 3.03 2.63A9.99 9.99 0 0 1 56 4v2a8 8 0 0 0-6.77 3.74c1.03 1.2 1.97 2.5 2.79 3.86A4 4 0 0 1 56 10v2a2 2 0 0 0-2 2.07 28.4 28.4 0 0 1 2-.07v2c-9.2 0-17.3 4.78-21.91 12H30zM7.75 28H0v-2c2.81 0 5.46.73 7.75 2zM56 20v2c-5.6 0-10.65 2.3-14.28 6h-2.7c4.04-4.89 10.15-8 16.98-8zm-39.03 8h-2.69C10.65 24.3 5.6 22 0 22v-2c6.83 0 12.94 3.11 16.97 8zm15.01-.4a28.09 28.09 0 0 1 2.8-3.86 8 8 0 0 0-13.55 0c1.03 1.2 1.97 2.5 2.79 3.86a4 4 0 0 1 7.96 0zm14.29-11.86c1.3-.48 2.63-.87 4-1.15a25.99 25.99 0 0 0-44.55 0c1.38.28 2.72.67 4.01 1.15a21.98 21.98 0 0 1 36.54 0zm-5.43 2.71c1.13-.72 2.3-1.37 3.54-1.93a19.98 19.98 0 0 0-32.76 0c1.23.56 2.41 1.2 3.54 1.93a15.98 15.98 0 0 1 25.68 0zm-4.67 3.78c.94-.95 1.96-1.83 3.03-2.63a13.98 13.98 0 0 0-22.4 0c1.07.8 2.09 1.68 3.03 2.63a9.99 9.99 0 0 1 16.34 0z'%3E%3C/path%3E%3C/svg%3E");
-}
-
-#background-novedades {
-  background-image: radial-gradient(circle, #bf471b, #bf471b);
-  padding-bottom: 10%;
-}
-
-#background-reconociminetos {
-  background-image: linear-gradient(
-    to bottom,
-    #fff3e9,
-    #fff3e9 70%,
-    #bf471b 30%,
-    #bf471b
-  );
-  background-size: 100% 100%;
-}
-
-#background-reparto {
-  background-image: linear-gradient(to bottom, #ffffff, #fff3e9);
-}
-
-#reconocimientos-altura {
-  display: flex;
 }
 
 .d-flex {
@@ -160,8 +159,9 @@ a {
 .item {
   width: 30%;
 }
+
 .active {
-  color: #000000;
+  color: #bf471b;
 }
 
 .redes {
@@ -169,93 +169,12 @@ a {
   margin-bottom: 20px;
 }
 
-i {
-  padding: 10px;
-}
-
 .image-mobile {
   display: none;
 }
 
-#nav-responsive {
-  display: none;
-}
-
-#nav-desktop {
-  position: fixed;
-  background-color: #ffffff;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  max-width: none;
-  z-index: 2;
-}
-
-#cta-mobile {
-  display: none;
-}
-
-footer {
-  margin: 40px;
-}
-footer p {
-  color: black;
-  text-align: center;
-}
-
-.animated-arrow {
-  animation-name: moveArrow;
-  animation-duration: 2s;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
-}
-
-@media (max-width: 767px) {
-  .carousel-inner .carousel-item > div {
-    display: none;
-  }
-  .carousel-inner .carousel-item > div:first-child {
-    display: block;
-  }
-}
-
-.carousel-inner .carousel-item.active,
-.carousel-inner .carousel-item-next,
-.carousel-inner .carousel-item-prev {
-  display: flex;
-}
-
-/* medium and up screens */
-@media (min-width: 768px) {
-  .carousel-inner .carousel-item-end.active,
-  .carousel-inner .carousel-item-next {
-    transform: translateX(25%);
-  }
-
-  .carousel-inner .carousel-item-start.active,
-  .carousel-inner .carousel-item-prev {
-    transform: translateX(-25%);
-  }
-}
-
-.carousel-inner .carousel-item-end,
-.carousel-inner .carousel-item-start {
-  transform: translateX(0);
-}
-
-/* Galeria de imagenes en la pagina backstage */
-#gallery-section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: -1;
-}
-
-#thumbnail-gallery-container {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-  padding: 15px 50px 10px 50px;
+.espacio {
+  padding-bottom: 4rem;
 }
 
 .thumbnail {
@@ -267,26 +186,8 @@ footer p {
 .carousel-caption {
   background: rgba(255, 255, 255, 0.929);
   opacity: 0.8;
-  /* otros estilos */
+  padding: 1rem;
 }
-
-img.thumbnail-image {
-  width: 90%;
-  height: 90%;
-  object-fit: cover;
-  object-position: center center;
-}
-
-@media only screen and (max-width: 800px) {
-  #gallery-section {
-    padding: 10px 10px 0px 10px;
-  }
-  #thumbnail-gallery-container {
-    padding: 0px;
-  }
-}
-
-/* Lightbox Styles */
 
 .lightbox-overlay {
   display: flex;
@@ -337,13 +238,6 @@ img.thumbnail-image {
   align-items: center;
 }
 
-a.close {
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 2em;
-  font-family: sans-serif;
-}
-
 .close::after {
   content: "X";
   color: rgb(250, 250, 250);
@@ -360,25 +254,286 @@ a.close {
   margin: 1%;
 }
 
-img.lightbox-image {
+/*Call to action animado*/
+#cta {
+  height: 300px;
   width: auto;
-  max-height: 80vh;
-  object-fit: contain;
+  animation-name: bounce;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
 }
 
-/*Fin de la galeria de imagenes*/
+#cta-desktop {
+  margin: 0px;
+  padding: 40px 0px 0px 0px;
+  /*background-image: linear-gradient(to bottom right, #cac3bb, #3f2406);*/
+  background-color: #3f2406;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 56 28' width='56' height='28'%3E%3Cpath fill='%23ebc7a9' fill-opacity='0.14' d='M56 26v2h-7.75c2.3-1.27 4.94-2 7.75-2zm-26 2a2 2 0 1 0-4 0h-4.09A25.98 25.98 0 0 0 0 16v-2c.67 0 1.34.02 2 .07V14a2 2 0 0 0-2-2v-2a4 4 0 0 1 3.98 3.6 28.09 28.09 0 0 1 2.8-3.86A8 8 0 0 0 0 6V4a9.99 9.99 0 0 1 8.17 4.23c.94-.95 1.96-1.83 3.03-2.63A13.98 13.98 0 0 0 0 0h7.75c2 1.1 3.73 2.63 5.1 4.45 1.12-.72 2.3-1.37 3.53-1.93A20.1 20.1 0 0 0 14.28 0h2.7c.45.56.88 1.14 1.29 1.74 1.3-.48 2.63-.87 4-1.15-.11-.2-.23-.4-.36-.59H26v.07a28.4 28.4 0 0 1 4 0V0h4.09l-.37.59c1.38.28 2.72.67 4.01 1.15.4-.6.84-1.18 1.3-1.74h2.69a20.1 20.1 0 0 0-2.1 2.52c1.23.56 2.41 1.2 3.54 1.93A16.08 16.08 0 0 1 48.25 0H56c-4.58 0-8.65 2.2-11.2 5.6 1.07.8 2.09 1.68 3.03 2.63A9.99 9.99 0 0 1 56 4v2a8 8 0 0 0-6.77 3.74c1.03 1.2 1.97 2.5 2.79 3.86A4 4 0 0 1 56 10v2a2 2 0 0 0-2 2.07 28.4 28.4 0 0 1 2-.07v2c-9.2 0-17.3 4.78-21.91 12H30zM7.75 28H0v-2c2.81 0 5.46.73 7.75 2zM56 20v2c-5.6 0-10.65 2.3-14.28 6h-2.7c4.04-4.89 10.15-8 16.98-8zm-39.03 8h-2.69C10.65 24.3 5.6 22 0 22v-2c6.83 0 12.94 3.11 16.97 8zm15.01-.4a28.09 28.09 0 0 1 2.8-3.86 8 8 0 0 0-13.55 0c1.03 1.2 1.97 2.5 2.79 3.86a4 4 0 0 1 7.96 0zm14.29-11.86c1.3-.48 2.63-.87 4-1.15a25.99 25.99 0 0 0-44.55 0c1.38.28 2.72.67 4.01 1.15a21.98 21.98 0 0 1 36.54 0zm-5.43 2.71c1.13-.72 2.3-1.37 3.54-1.93a19.98 19.98 0 0 0-32.76 0c1.23.56 2.41 1.2 3.54 1.93a15.98 15.98 0 0 1 25.68 0zm-4.67 3.78c.94-.95 1.96-1.83 3.03-2.63a13.98 13.98 0 0 0-22.4 0c1.07.8 2.09 1.68 3.03 2.63a9.99 9.99 0 0 1 16.34 0z'%3E%3C/path%3E%3C/svg%3E");
+}
 
-@keyframes moveArrow {
-  from {
-    transform: translateY(-100px);
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
   }
-  to {
-    transform: translateY(40px);
+  50% {
+    transform: translateY(-20px);
   }
+  100% {
+    transform: translateY(0);
+  }
+}
+/*Call to action animado*/
+
+#background-novedades {
+  background-image: radial-gradient(circle, #bf471b, #bf471b);
+  padding-bottom: 10%;
+}
+
+#background-reconociminetos {
+  background-image: linear-gradient(
+    to bottom,
+    #fae5d3,
+    #fae5d3 70%,
+    #bf471b 30%,
+    #bf471b
+  );
+  background-size: 100% 100%;
+}
+
+#background-reparto {
+  background-image: linear-gradient(to bottom, #ffffff, #fae5d3);
+}
+
+#reconocimientos-altura {
+  display: flex;
+}
+
+#nav-responsive {
+  display: none;
+}
+
+#nav-desktop {
+  position: fixed;
+  background-color: #ffffff;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  max-width: none;
+  z-index: 2;
+}
+
+#cta-mobile {
+  display: none;
+}
+
+#gallery-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: -1;
+}
+
+#thumbnail-gallery-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  padding: 15px 50px 10px 50px;
+}
+
+.js-scroll {
+  opacity: 0;
+  transition: opacity 500ms;
+}
+
+.js-scroll.scrolled {
+  opacity: 1;
+}
+
+.scrolled.fade-in {
+  animation: fade-in 1s ease-in-out both;
+}
+
+.scrolled.fade-in-bottom {
+  animation: fade-in-bottom 1s ease-in-out both;
+}
+
+.scrolled.slide-left {
+  animation: slide-in-left 1s ease-in-out both;
+}
+
+.scrolled.slide-right {
+  animation: slide-in-right 1s ease-in-out both;
+}
+
+/* ----------------------------------------------
+ * Generated by Animista on 2021-2-11 23:32:31
+ * Licensed under FreeBSD License.
+ * See http://animista.net/license for more info. 
+ * w: http://animista.net, t: @cssanimista
+ * ---------------------------------------------- */
+
+@keyframes slide-in-left {
+  0% {
+    -webkit-transform: translateX(-100px);
+    transform: translateX(-100px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-in-right {
+  0% {
+    -webkit-transform: translateX(100px);
+    transform: translateX(100px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fade-in-bottom {
+  0% {
+    -webkit-transform: translateY(50px);
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.glitch {
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  background: #bf471b;
+  color: #fff;
+  font-size: 96px;
+  font-family: "Fira Mono", monospace;
+  letter-spacing: -7px;
+}
+
+.glitch-text {
+  animation: glitch 1s linear infinite;
+}
+
+@keyframes glitch {
+  2%,
+  64% {
+    transform: translate(2px, 0) skew(0deg);
+  }
+  4%,
+  60% {
+    transform: translate(-2px, 0) skew(0deg);
+  }
+  62% {
+    transform: translate(0, 0) skew(5deg);
+  }
+}
+
+div:before,
+div:after {
+  content: attr(title);
+  position: absolute;
+  left: 0;
+}
+
+div:before {
+  animation: glitchTop 1s linear infinite;
+  clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+}
+
+@keyframes glitchTop {
+  2%,
+  64% {
+    transform: translate(2px, -2px);
+  }
+  4%,
+  60% {
+    transform: translate(-2px, 2px);
+  }
+  62% {
+    transform: translate(13px, -1px) skew(-13deg);
+  }
+}
+
+div:after {
+  animation: glitchBotom 1.5s linear infinite;
+  clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+  -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+}
+
+@keyframes glitchBotom {
+  2%,
+  64% {
+    transform: translate(-2px, 0);
+  }
+  4%,
+  60% {
+    transform: translate(-2px, 0);
+  }
+  62% {
+    transform: translate(-22px, 5px) skew(21deg);
+  }
+}
+
+iframe {
+  width: 600px;
+  height: 350px;
 }
 
 /* Reglas CSS para pantallas medianas */
-@media only screen and (max-width: 1180px) {
+@media only screen and (max-width: 920px) {
+  h1 {
+    font-size: 60px;
+  }
+
+  h2 {
+    font-size: 3rem;
+  }
+
+  h5 {
+    font-family: "Roboto", sans-serif;
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: rgb(41, 33, 25);
+  }
+
+  p {
+    color: rgb(41, 33, 25);
+    font-family: "Roboto", sans-serif;
+    font-size: 1.3rem;
+    font-weight: 400;
+  }
+
+  #gallery-section {
+    padding: 10px 10px 0px 10px;
+  }
+  #thumbnail-gallery-container {
+    padding: 0px;
+  }
+
   .item {
     width: 100%;
   }
@@ -415,12 +570,55 @@ img.lightbox-image {
     top: 0;
     left: 30%;
   }
+
+  .header {
+    height: 95vh;
+  }
+
+  .header .card-img {
+    height: 95vh;
+    object-fit: cover;
+  }
+
+  .card-img-overlay .card-title {
+    padding: 150px;
+  }
+
+  .card-img-top {
+    height: 40vh;
+    width: auto;
+  }
+
+  iframe {
+    height: 660px;
+    width: 340px;
+  }
 }
 
 /* Reglas CSS para pantallas pequeñas */
 @media only screen and (max-width: 576px) {
-  #background-novedades .d-flex {
-    flex-direction: column;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p {
+    text-align: center;
+  }
+
+  section {
+    padding: 2rem;
+  }
+
+  iframe {
+    height: 640px;
+    width: 360px;
+  }
+
+  .card-img-top {
+    height: 40vh;
+    width: auto;
   }
 
   .header-desktop {
@@ -435,8 +633,14 @@ img.lightbox-image {
     display: none;
   }
 
+  /*Header del resto de las paginas*/
   .header {
-    height: 90vh;
+    height: 95vh;
+  }
+
+  .header .card-img {
+    height: 95vh;
+    object-fit: cover;
   }
 
   .card-img-overlay {
@@ -446,6 +650,28 @@ img.lightbox-image {
     align-items: center;
     height: 90vh;
     text-shadow: 2px 2px 4px rgb(171, 157, 140);
+  }
+
+  .row {
+    display: flex;
+  }
+
+  .card-overlay img:last-child {
+    position: absolute;
+    top: 0;
+    left: 30%;
+  }
+
+  .text-end {
+    text-align: center !important;
+  }
+
+  .glitch {
+    font-size: 60px;
+  }
+
+  #background-novedades .d-flex {
+    flex-direction: column;
   }
 
   #nav-desktop {
@@ -461,9 +687,6 @@ img.lightbox-image {
     width: 100%;
     max-width: none;
     z-index: 2;
-  }
-  .row {
-    display: flex;
   }
 
   #cta-desktop {
@@ -482,16 +705,41 @@ img.lightbox-image {
     margin-top: 40px;
   }
 
-  .card-overlay img:last-child {
-    position: absolute;
-    top: 0;
-    left: 30%;
-  }
-
-  .text-end {
-    text-align: center !important;
-  }
-  .katara {
-    display: none;
+  .card-img-overlay .card-title {
+    padding: 0px;
   }
 }
+
+/*Carrucel que usa JavaScript para tener movimiento*/
+@media (max-width: 767px) {
+  .carousel-inner .carousel-item > div {
+    display: none;
+  }
+  .carousel-inner .carousel-item > div:first-child {
+    display: block;
+  }
+}
+
+.carousel-inner .carousel-item.active,
+.carousel-inner .carousel-item-next,
+.carousel-inner .carousel-item-prev {
+  display: flex;
+}
+
+@media (min-width: 768px) {
+  .carousel-inner .carousel-item-end.active,
+  .carousel-inner .carousel-item-next {
+    transform: translateX(25%);
+  }
+
+  .carousel-inner .carousel-item-start.active,
+  .carousel-inner .carousel-item-prev {
+    transform: translateX(-25%);
+  }
+}
+
+.carousel-inner .carousel-item-end,
+.carousel-inner .carousel-item-start {
+  transform: translateX(0);
+}
+/*Fin del carrucel que usa java script para tener movimiento*/
