--- a/produccion_2/CSS/style.css
+++ b/produccion_2/CSS/style.css
@@ -593,10 +593,9 @@ iframe {
     height: 40vh;
     width: auto;
   }
-
-  iframe {
-    height: 660px;
-    width: 340px;
+  .video-vertical {
+    height: 640px;
+    width: 360px;
   }
 }
 
